# rust_dev_web

./: Cargo.toml  Dockerfile  README.md  build.rs  docker-compose.yml
handle-errors/: Cargo.toml
handle-errors/src/: lib.rs
integration_test/: .env  Cargo.toml
integration_test/src/: main.rs
migrations/: 20240219032251_accounts_table.up.sql  20240219032524_products_table.up.sql
src/: config.rs  lib.rs  store.rs
src/routes/: authentication.rs  mod.rs  products.rs
src/types/: accounts.rs  mod.rs  pagination.rs  products.rs
