[package]
name = "integration_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
restful-api = {path = "../", version = "1.0.0"}
dotenv = "0.15.0"
tokio = { version = "1.36.0", features = ["full"] }
reqwest = {version = "0.11.24", features = ["json"]}
serde = { version = "1.0.197", features = ["derive"]}
serde_json = "1.0.114"
futures-util = "0.3.30"
inline_colorization = "0.1.6"